# xiao

./: .gitignore  .release-please-manifest.json  AGENTS.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  PUBLISHING.md  README.md  llms.txt  pyproject.toml  release-please-config.json
.claude-plugin/: plugin.json
.claude/skills/xiao/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml  release-please.yml
docs/demo/: demo.tape
docs/submissions/: README.md  _shared.md  anthropic-plugin-directory.md  anthropics-skills-cookbook.md  hermes.md  llms-txt-directory.md  skills-sh.md
scripts/skills-sh/: AGENTS.md  README.md  SKILL.md  package.json
skills/xiao/: SKILL.md
src/xiao/: __init__.py  __main__.py  mcp_server.py
src/xiao/cli/: _cta.py  app.py  clean.py  consumables.py  device.py  doctor.py  map.py  rooms.py  schedule.py  settings.py  setup.py
src/xiao/core/: __init__.py  cloud.py  cloud_vacuum.py  config.py  discovery.py  exit_codes.py  room_cleaning.py  token_refresh.py  vacuum.py
src/xiao/dashboard/: __init__.py  index.html  server.py
src/xiao/ui/: formatters.py
tests/: test_app_callback.py  test_cli_smoke.py  test_cloud.py  test_cloud_vacuum.py  test_config.py  test_dashboard.py  test_dashboard_server.py  test_doctor.py  test_mcp_server.py  test_room_cleaning.py  test_token_refresh.py  test_ui_formatters.py
